# ChangeLog for x11-themes/gtk-engines-xfce
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-themes/gtk-engines-xfce/ChangeLog,v 1.61 2007/02/07 16:38:47 drac Exp $

  07 Feb 2007; Samuli Suominen <drac@gentoo.org>
  gtk-engines-xfce-2.4.0.ebuild:
  Add blocker for old versions to avoid file-collisions, related to previously
  removed slots.

*gtk-engines-xfce-2.2.8-r1 (07 Feb 2007)
*gtk-engines-xfce-2.2.7-r2 (07 Feb 2007)

  07 Feb 2007; Samuli Suominen <drac@gentoo.org>
  -gtk-engines-xfce-2.2.7-r1.ebuild, +gtk-engines-xfce-2.2.7-r2.ebuild,
  -gtk-engines-xfce-2.2.8.ebuild, +gtk-engines-xfce-2.2.8-r1.ebuild:
  Unslot ebuilds because of file collisions for bug 165781

  28 Jan 2007; Peter Weller <welp@gentoo.org> gtk-engines-xfce-2.4.0.ebuild:
  Dep fixes

*gtk-engines-xfce-2.4.0 (22 Jan 2007)

  22 Jan 2007; Joshua Nichols <nichoj@gentoo.org>
  +gtk-engines-xfce-2.4.0.ebuild:
  Version bump.

*gtk-engines-xfce-2.3.99.2 (07 Dec 2006)

  07 Dec 2006; Joshua Nichols <nichoj@gentoo.org>
  +gtk-engines-xfce-2.3.99.2.ebuild:
  Version bump for RC2. See bug #146563.

  13 Nov 2006; Bryan Østergaard <kloeri@gentoo.org>
  gtk-engines-xfce-2.2.8.ebuild:
  Stable on Alpha.

  14 Oct 2006; Bryan Østergaard <kloeri@gentoo.org>
  gtk-engines-xfce-2.2.8.ebuild:
  Stable on ia64.

  10 Oct 2006; Daniel Gryniewicz <dang@gentoo.org>
  gtk-engines-xfce-2.2.8.ebuild:
  Marked stable on amd64 for bug #150746

  09 Oct 2006; Javier Villavicencio <the_paya@gentoo.org>
  gtk-engines-xfce-2.2.8.ebuild:
  Keyworded ~x86-fbsd.

  05 Sep 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  gtk-engines-xfce-2.2.8.ebuild:
  Stable on sparc

*gtk-engines-xfce-2.3.90.2 (10 Jul 2006)

  10 Jul 2006; Brad Cowan <bcowan@gentoo.org>
  +gtk-engines-xfce-2.3.90.2.ebuild:
  Xfce beta 2 builds.

  09 Jul 2006; Joshua Kinard <kumba@gentoo.org>
  gtk-engines-xfce-2.2.8.ebuild:
  Marked stable on mips.

*gtk-engines-xfce-2.3.90.1 (20 Apr 2006)
